PP-8 fix: change settings-button name and fix navbar shifting when settings menu is opened.

--- a/js/components/settings-button/settings-button.css
+++ b/js/components/settings-button/settings-button.css
@@ -1,11 +1,11 @@
 /**
- * Hamburger Button Component Styles
+ * Settings Button Component Styles
  * @author ValentimSts
  * @since 0.0.0
  */
 
-/* Hamburger Button */
-.hamburger-button {
+/* Settings Button */
+.settings-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -16,17 +16,24 @@
   border: none;
   cursor: pointer;
   transition: opacity 0.2s ease;
+
+  border: 1px solid var(--color-blueprint);
 }
 
-.hamburger-button:hover {
+/* Hide blueprint border when debug mode is disabled */
+.blueprint-hidden #settings-button {
+  border-color: transparent;
+}
+
+.settings-button:hover {
   opacity: 0.7;
 }
 
-.hamburger-button:focus {
+.settings-button:focus {
   outline: none;
 }
 
-.hamburger-button__icon {
+.settings-button__icon {
   width: 100%;
   height: 100%;
   filter: var(--icon-filter, invert(0));
